# mpu6050_datalogger

./: CMakeLists.txt  README.md  mpu6050_datalogger.c
extra/: exemplo.csv  script.py
lib/include/: buzzer.h  globals.h  sd_utils.h  setup.h
lib/include/mpu6050/: mpu6050.h
lib/include/ssd1306/: font.h  ssd1306.h
lib/include/tasks/: tasks.h
lib/include/ws2812/: ws2812.h
lib/source/: buzzer.c  sd_utils.c  setup.c
lib/source/mpu6050/: mpu6050.c
lib/source/tasks/: monitoring_screen_task.c  mpu6050_task.c  sd_action_task.c  sd_control_panel_task.c  sd_verifier_task.txt  task_entrada.c  task_leds.c  task_matrix.c  task_saida.c
lib/source/ws2812/: ws2812.c
